RESOLVED FIXED94489
Web Inspector: NMI: wrong size was reported for immutable StylePropertySet
https://bugs.webkit.org/show_bug.cgi?id=94489
Summary Web Inspector: NMI: wrong size was reported for immutable StylePropertySet
Ilya Tikhonovsky
Reported 2012-08-20 09:49:41 PDT
EOM
Attachments
Patch (4.46 KB, patch)
2012-08-20 09:59 PDT, Ilya Tikhonovsky
yurys: review+
Ilya Tikhonovsky
Comment 1 2012-08-20 09:59:33 PDT
Yury Semikhatsky
Comment 2 2012-08-21 00:06:41 PDT
Comment on attachment 159461 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=159461&action=review > Source/WebCore/ChangeLog:8 > + Immutable StylePropertySet is creating via placement new. creating -> created
Ilya Tikhonovsky
Comment 3 2012-08-21 00:18:13 PDT
Note You need to log in before you can comment on or make changes to this bug.