Web Inspector: NMI: wrong size was reported for immutable StylePropertySet https://bugs.webkit.org/show_bug.cgi?id=94489

Reviewed by Yury Semikhatsky.

Immutable StylePropertySet is created via placement new.
The rest of the allocated buffer is used as an array of CSSProperty.
This means that we don't need to report m_properties member but have to report actual size of the buffer
used for both, the object and CSSProperty array.

* css/StylePropertySet.cpp:
(WebCore::immutableStylePropertySetSize):
(WebCore):
(WebCore::StylePropertySet::createImmutable):
(WebCore::StylePropertySet::reportMemoryUsage):
* dom/MemoryInstrumentation.h:
(WebCore::MemoryObjectInfo::reportObjectInfo):
(WebCore::MemoryClassInfo::MemoryClassInfo):

Canonical link: https://commits.webkit.org/112376@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@126139 268f45cc-cd09-0410-ab3c-d52691b4dbfc